--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amipet",
+  "name": "jogo2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^6.26.1",
-    "react-router-dom": "^6.26.1",
-    "styled-components": "^6.1.12"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
