--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jogo2",
+  "name": "jogo1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "style-components": "^0.1.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
