--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jogo1",
+  "name": "amipet",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "style-components": "^0.1.0",
-    "styled-components": "^6.1.13"
+    "react-router": "^6.26.1",
+    "react-router-dom": "^6.26.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
